--- a/index.html
+++ b/index.html
@@ -4,7 +4,180 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./fonts/fonts.css">
+    <link rel="stylesheet" href="./styles/global.css">
+    <link rel="stylesheet" href="./styles/style.css">
     <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
   </head>
-  <body></body>
+  <body>
+    <header class="header">
+      <nav class="header__menu">
+        <ul class="header__links-list">
+          <li class="header__links-list-item header__link_active">
+            <a class="header__link">главная</a>
+          </li>
+          <li class="header__links-list-item">
+            <a class="header__link" href="#0">посмотреть лоты</a>
+          </li>
+          <li class="header__links-list-item">
+            <a class="header__link" href="#0">об аукционе</a>
+          </li>
+        </ul>
+      </nav>
+      <a class="header__logo">
+        <img 
+          class="header__logo-image"
+          src="./images/logo-black.svg"
+          alt="Логотип проекта"
+        />
+      </a>
+      <address class="address">
+        <ul class="header__address">
+          <li class="header__address-item">
+            <a href="tel:+99995555555">+9 999 555 5555</a>
+          </li>
+          <li class="header__address-item">
+            <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+          </li>
+          <li class="header__address-item">
+            <a href="#0">наб. Принсенграхт 263- 265, Амстердам</a>
+          </li>
+        </ul>
+      </address>
+    </header>
+    <main>
+      <section class="cover">
+        <div class="overlay"></div>
+        <div>
+          <h1 class="cover__title">
+            <span class="alignet-text">ОНО</span>
+            <span class="alignet-text_center">ТЕБ<span class="no-letter-spacing">E</span></span>
+            <span class="alignet-text_right">НАД<span class="no-letter-spacing">О</span></span>
+          </h1>
+        </div>
+        <div class="cover__description">
+          <p class="cover__description-text">
+            Аукцион вещей, в которые никто не верил
+          </p>
+          <button>
+            <p class="bet-button">Сделать ставку</p>
+          </button>
+        </div>
+      </section>
+      <section class="lots">
+        <h1 class="lots__heading">Лоты</h1>
+        <ul class="lots__card-list">
+          <li class="lots__card-list-item">
+            <a class="card-link">
+              <article class="card card_type_film">
+                <div class="overlay"></div>
+                <h2 class="card__title">Фильм режиссёра, который бросил киношколу</h2>
+                <p class="card__text">Не просто бросил, а ушёл с первой лекции. Какой 
+                  была бы ваша ставка, если бы вы не знали, что 
+                  режиссёр — Пол Томас Андерсон?</p>
+              </article>
+            </a>
+          </li>
+          <li class="lots__card-list-item">
+            <a class="card-link">
+              <article class="card card_type_book">
+                <div class="overlay"></div>
+                <h2 class="card__title">Книга, где описан один скучный день из жизни 
+                  рекламного агента</h2>
+                <p class="card__text">Объёмом почти в тысячу страниц. Иногда без знаков 
+                  препинания и с переходами на древнеанглийский. 
+                  В ней одновременно рассказывается о 16 июня 1904 
+                  года и об истории литературы, начиная с античных 
+                  времён. И это всё накладывается на эпическую поэму 
+                  Гомера. Сколько бы вы поставили на «Улисса» Джеймса 
+                  Джойса?</p>
+              </article>
+            </a>
+          </li>
+          <li class="lots__card-list-item">
+            <a class="card-link">
+              <article class="card card_type_picture">
+                <div class="overlay"></div>
+                <h2 class="card__title">Картина, которую повторит даже 5-летний сын маминой подруги</h2>
+                <p class="card__text">Ну действительно, там линия, тут 
+                  кружочек, а здесь и вовсе что-то 
+                  похожее на инфузорию-туфельку. 
+                  Никаких полей, лесов, котиков... 
+                  Сколько бы вы на такое поставили, 
+                  если бы не знали, что это — одна из 
+                  революционных работ Кандинского?</p>
+              </article>
+            </a>
+          </li>
+        </ul>
+        <h2 class="lots__look-more-link">
+          <a href="#0">посмотреть больше</a>
+        </h2>
+      </section>
+      <section class="about">
+        <div>
+          <a class="about__logo">
+            <img 
+            class="about__logo-image"
+            src="./images/logo-white.svg"
+            alt="Логотип Об аукционе"
+            />
+          </a>
+        </div>
+        <div>
+          <h1>Об аукционе</h1>
+          <div>
+            <p>Здесь вы не встретите очередное пафосное 
+              собрание невероятно дорогого антиквариата. 
+              Наши лоты вообще не должны были попасть ни 
+              на один аукцион. Потому что кому нужен дневник 
+              девочки-подростка или картина, которую может 
+              нарисовать даже ребёнок? Кому нужны все эти 
+              странные вещи, созданные любителями?
+            </p>
+            <p>Слишком сложные или, наоборот, слишком 
+                простые. Опережающие своё время. В пух и 
+                прах растерзанные критиками. Непринятые и 
+                непонятые. Когда-то они казались просто 
+                неудачными. Но, несмотря на критику, кажущуюся 
+                простоту или сложность, сейчас без этих лотов 
+                невозможно представить современную культуру. 
+                Когда в эти вещи не верил никто, продолжали 
+                верить их создатели. И сейчас эти лоты стали 
+                культовыми.
+            </p>
+          </div>
+        </div>
+      </section>
+    </main>
+    <footer class="footer">
+      <address>
+        <ul class="address-list">
+          <li class="address-item">
+            <a class="address-link">+9 999 555 5555</a>
+          </li>
+          <li class="address-item">
+            <a class="address-link" href="#0">info@sobaka.ge</a>
+          </li>
+          <li class="address-item">
+            <a class="address-link" href="#0">наб. Принсенграхт 263- 265, Амстердам</a>
+          </li>
+        </ul>
+      </address>
+        <nav class="menu">
+          <ul class="menu-list">
+            <li class="menu-item menu-item_active">
+            <a class="menu-link">главная</a>
+            </li>
+            <li class="menu-item">
+              <a class="menu-link" href="#0">посмотреть лоты</a>
+            </li>
+            <li class="menu-item">
+              <a class="menu-link" href="#0">об аукционе</a>
+            </li>
+          </ul>
+        </nav>
+      <ul></ul>
+    </footer>
+  </body>
 </html>
