--- a/index.html
+++ b/index.html
@@ -31,15 +31,15 @@
           alt="Логотип проекта"
         />
       </a>
-      <address class="address">
-        <ul class="header__address">
+      <address class="header__address">
+        <ul class="header__address-list">
           <li class="header__address-item">
             <a href="tel:+99995555555">+9 999 555 5555</a>
           </li>
           <li class="header__address-item">
             <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
           </li>
-          <li class="header__address-item">
+          <li class="header__address-item prinsenghart">
             <a href="#0">наб. Принсенграхт 263- 265, Амстердам</a>
           </li>
         </ul>
@@ -115,69 +115,101 @@
         </h2>
       </section>
       <section class="about">
-        <div>
-          <a class="about__logo">
-            <img 
-            class="about__logo-image"
-            src="./images/logo-white.svg"
-            alt="Логотип Об аукционе"
-            />
-          </a>
-        </div>
-        <div>
-          <h1>Об аукционе</h1>
-          <div>
-            <p>Здесь вы не встретите очередное пафосное 
-              собрание невероятно дорогого антиквариата. 
-              Наши лоты вообще не должны были попасть ни 
-              на один аукцион. Потому что кому нужен дневник 
-              девочки-подростка или картина, которую может 
-              нарисовать даже ребёнок? Кому нужны все эти 
-              странные вещи, созданные любителями?
-            </p>
-            <p>Слишком сложные или, наоборот, слишком 
-                простые. Опережающие своё время. В пух и 
-                прах растерзанные критиками. Непринятые и 
-                непонятые. Когда-то они казались просто 
-                неудачными. Но, несмотря на критику, кажущуюся 
-                простоту или сложность, сейчас без этих лотов 
-                невозможно представить современную культуру. 
-                Когда в эти вещи не верил никто, продолжали 
-                верить их создатели. И сейчас эти лоты стали 
-                культовыми.
-            </p>
+        <div class="about__column">
+          <div class="about__logo">
+            <div class="about__logo-container">
+              <a>
+                <img 
+                class="about__logo-image"
+                src="./images/logo-white.svg"
+                alt="Логотип Об аукционе"
+                />
+              </a>
+            </div>
+          </div>
+          <div class="about__content">
+            <h1 class="about__title">Об аукционе</h1>
+              <div class="about__text">
+                <p class="about__text-first">Здесь вы не встретите очередное пафосное 
+                  собрание невероятно дорогого антиквариата. 
+                  Наши лоты вообще не должны были попасть ни 
+                  на один аукцион. Потому что кому нужен дневник 
+                  девочки-подростка или картина, которую может 
+                  нарисовать даже ребёнок? Кому нужны все эти 
+                  странные вещи, созданные любителями?
+                </p>
+                <p>Слишком сложные или, наоборот, слишком 
+                  простые. Опережающие своё время. В пух и 
+                  прах растерзанные критиками. Непринятые и 
+                  непонятые. Когда-то они казались просто 
+                  неудачными. Но, несмотря на критику, кажущуюся 
+                  простоту или сложность, сейчас без этих лотов 
+                  невозможно представить современную культуру. 
+                  Когда в эти вещи не верил никто, продолжали 
+                  верить их создатели. И сейчас эти лоты стали 
+                  культовыми.
+                </p>
+              </div>
           </div>
         </div>
       </section>
     </main>
     <footer class="footer">
-      <address>
-        <ul class="address-list">
-          <li class="address-item">
-            <a class="address-link">+9 999 555 5555</a>
+      <address class="footer__address">
+        <ul class="footer__menu-list">
+          <li class="footer__menu-list-item">
+            <a class="footer__menu-link">+9 999 555 5555</a>
           </li>
-          <li class="address-item">
-            <a class="address-link" href="#0">info@sobaka.ge</a>
+          <li class="footer__menu-list-item">
+            <a class="footer__menu-link" href="#0">info@sobaka.ge</a>
           </li>
-          <li class="address-item">
-            <a class="address-link" href="#0">наб. Принсенграхт 263- 265, Амстердам</a>
+          <li class="footer__menu-list-item">
+            <a class="footer__menu-link prinsenghart" href="#0">наб. Принсенграхт 263- 265, Амстердам</a>
           </li>
         </ul>
       </address>
-        <nav class="menu">
-          <ul class="menu-list">
-            <li class="menu-item menu-item_active">
-            <a class="menu-link">главная</a>
-            </li>
-            <li class="menu-item">
-              <a class="menu-link" href="#0">посмотреть лоты</a>
-            </li>
-            <li class="menu-item">
-              <a class="menu-link" href="#0">об аукционе</a>
-            </li>
-          </ul>
-        </nav>
-      <ul></ul>
+      <nav class="footer__menu">
+        <ul class="footer__menu-list-nav">
+          <li class="footer__menu-list-item footer__menu-link_active">
+            <a class="footer__menu-link">главная</a>          </li>
+          <li class="footer__menu-list-item">
+            <a class="footer__menu-link" href="#0">посмотреть лоты</a>
+          </li>
+          <li class="footer__menu-list-item">             
+            <a class="footer__menu-link" href="#0">об аукционе</a>
+          </li>
+        </ul>
+      </nav>
+      <nav class="footer__social-list">
+        <ul class="footer__menu-list-soc">
+          <li class="footer__menu-list-item footer__menu-link_active">
+            <a class="footer__social-link">
+              <img 
+              class="footer__social-icon"
+              src="./images/yt.svg"
+              alt="Логотип Ютьюб"/>
+            </a>
+          </li>
+          <li class="footer__menu-list-item">
+            <a class="footer__social-link">
+              <img 
+              class="footer__social-icon"
+              src="./images/vk.svg"
+              alt="Логотип вконтакте"
+              />
+            </a>
+          </li>  
+          <li class="footer__menu-list-item">
+            <a class="footer__social-link">
+              <img 
+              class="footer__social-icon"
+              src="./images/pinterest.svg"
+              alt="Логотип пинтерест"
+              />
+            </a>
+          </li>
+        </ul>
+      </nav>
     </footer>
   </body>
 </html>
