Исправление ошибок автотеста №1

--- a/index.html
+++ b/index.html
@@ -59,9 +59,7 @@
           <p class="cover__description-text">
             Аукцион вещей, в которые никто не верил
           </p>
-          <button>
-            <p class="bet-button">Сделать ставку</p>
-          </button>
+          <button class="bet-button">Сделать ставку</button>
         </div>
       </section>
       <section class="lots">
