Исравление ошибок автотеста №2

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           <li class="header__address-item">
             <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
           </li>
-          <li class="header__address-item prinsenghart">
+          <li class="header__address-item text_decoration-none">
             <a href="#0">наб. Принсенграхт 263- 265, Амстердам</a>
           </li>
         </ul>
@@ -162,7 +162,7 @@
             <a class="footer__menu-link" href="#0">info@sobaka.ge</a>
           </li>
           <li class="footer__menu-list-item">
-            <a class="footer__menu-link prinsenghart" href="#0">наб. Принсенграхт 263- 265, Амстердам</a>
+            <a class="footer__menu-link text_decoration-none" href="#0">наб. Принсенграхт 263- 265, Амстердам</a>
           </li>
         </ul>
       </address>
