Исравление ошибок автотеста №3

--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
           <li class="header__address-item">
             <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
           </li>
-          <li class="header__address-item text_decoration-none">
-            <a href="#0">наб. Принсенграхт 263- 265, Амстердам</a>
+          <li class="header__address-item">
+            <a class="text_decoration-none" href="#0">наб. Принсенграхт 263- 265, Амстердам</a>
           </li>
         </ul>
       </address>
@@ -156,20 +156,21 @@
       <address class="footer__address">
         <ul class="footer__menu-list">
           <li class="footer__menu-list-item">
-            <a class="footer__menu-link">+9 999 555 5555</a>
+            <a href="tel:+99995555555">+9 999 555 5555</a>
           </li>
           <li class="footer__menu-list-item">
-            <a class="footer__menu-link" href="#0">info@sobaka.ge</a>
+            <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
           </li>
           <li class="footer__menu-list-item">
-            <a class="footer__menu-link text_decoration-none" href="#0">наб. Принсенграхт 263- 265, Амстердам</a>
+            <a class="text_decoration-none" href="#0">наб. Принсенграхт 263- 265, Амстердам</a>
           </li>
         </ul>
       </address>
       <nav class="footer__menu">
         <ul class="footer__menu-list-nav">
           <li class="footer__menu-list-item footer__menu-link_active">
-            <a class="footer__menu-link">главная</a>          </li>
+            <a class="footer__menu-link">главная</a>          
+          </li>
           <li class="footer__menu-list-item">
             <a class="footer__menu-link" href="#0">посмотреть лоты</a>
           </li>
@@ -202,7 +203,7 @@
               <img 
               class="footer__social-icon"
               src="./images/pinterest.svg"
-              alt="Логотип пинтереста"
+              alt="Логотип пинтерест"
               />
             </a>
           </li>
