--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
               <img 
               class="footer__social-icon"
               src="./images/pinterest.svg"
-              alt="Логотип пинтерест"
+              alt="Логотип пинтереста"
               />
             </a>
           </li>
