--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           alt="Логотип проекта"
         />
       </a>
-      <address class="header__address">
+      <address class="address header_type_address">
         <ul class="header__address-list">
           <li class="header__address-item">
             <a href="tel:+99995555555">+9 999 555 5555</a>
@@ -63,16 +63,14 @@
         </div>
       </section>
       <section class="lots">
-        <h1 class="lots__heading">Лоты</h1>
+        <h2 class="lots__heading">Лоты</h2>
         <ul class="lots__card-list">
           <li class="lots__card-list-item">
             <a class="card-link">
               <article class="card card_type_film">
                 <div class="overlay"></div>
-                <h2 class="card__title">Фильм режиссёра, который бросил киношколу</h2>
-                <p class="card__text">Не просто бросил, а ушёл с первой лекции. Какой 
-                  была бы ваша ставка, если бы вы не знали, что 
-                  режиссёр — Пол Томас Андерсон?</p>
+                <h3 class="card__title">Фильм режиссёра, который бросил киношколу</h3>
+                <p class="card__text">Не просто бросил, а ушёл с первой лекции. Какой была бы ваша ставка, если бы вы не знали, что режиссёр — Пол Томас Андерсон?</p>
               </article>
             </a>
           </li>
@@ -80,8 +78,8 @@
             <a class="card-link">
               <article class="card card_type_book">
                 <div class="overlay"></div>
-                <h2 class="card__title">Книга, где описан один скучный день из жизни 
-                  рекламного агента</h2>
+                <h3 class="card__title">Книга, где описан один скучный день из жизни 
+                  рекламного агента</h3>
                 <p class="card__text">Объёмом почти в тысячу страниц. Иногда без знаков 
                   препинания и с переходами на древнеанглийский. 
                   В ней одновременно рассказывается о 16 июня 1904 
@@ -96,21 +94,13 @@
             <a class="card-link">
               <article class="card card_type_picture">
                 <div class="overlay"></div>
-                <h2 class="card__title">Картина, которую повторит даже 5-летний сын маминой подруги</h2>
-                <p class="card__text">Ну действительно, там линия, тут 
-                  кружочек, а здесь и вовсе что-то 
-                  похожее на инфузорию-туфельку. 
-                  Никаких полей, лесов, котиков... 
-                  Сколько бы вы на такое поставили, 
-                  если бы не знали, что это — одна из 
-                  революционных работ Кандинского?</p>
+                <h3 class="card__title">Картина, которую повторит даже 5-летний сын маминой подруги</h3>
+                <p class="card__text">Ну действительно, там линия, тут кружочек, а здесь и вовсе что-то похожее на инфузорию-туфельку. Никаких полей, лесов, котиков...  Сколько бы вы на такое поставили, если бы не знали, что это — одна из революционных работ Кандинского?</p>
               </article>
             </a>
           </li>
         </ul>
-        <h2 class="lots__look-more-link">
-          <a href="#0">посмотреть больше</a>
-        </h2>
+        <a href="#0" class="lots__look-more-link">посмотреть больше</a>
       </section>
       <section class="about">
         <div class="about__column">
@@ -126,26 +116,11 @@
             </div>
           </div>
           <div class="about__content">
-            <h1 class="about__title">Об аукционе</h1>
+            <h2 class="about__title">Об аукционе</h2>
               <div class="about__text">
-                <p class="about__text-first">Здесь вы не встретите очередное пафосное 
-                  собрание невероятно дорогого антиквариата. 
-                  Наши лоты вообще не должны были попасть ни 
-                  на один аукцион. Потому что кому нужен дневник 
-                  девочки-подростка или картина, которую может 
-                  нарисовать даже ребёнок? Кому нужны все эти 
-                  странные вещи, созданные любителями?
+                <p class="about__text-important">Здесь вы не встретите очередное пафосное собрание невероятно дорогого антиквариата. Наши лоты вообще не должны были попасть ни на один аукцион. Потому что кому нужен дневник девочки-подростка или картина, которую может нарисовать даже ребёнок? Кому нужны все эти странные вещи, созданные любителями?
                 </p>
-                <p>Слишком сложные или, наоборот, слишком 
-                  простые. Опережающие своё время. В пух и 
-                  прах растерзанные критиками. Непринятые и 
-                  непонятые. Когда-то они казались просто 
-                  неудачными. Но, несмотря на критику, кажущуюся 
-                  простоту или сложность, сейчас без этих лотов 
-                  невозможно представить современную культуру. 
-                  Когда в эти вещи не верил никто, продолжали 
-                  верить их создатели. И сейчас эти лоты стали 
-                  культовыми.
+                <p>Слишком сложные или, наоборот, слишком простые. Опережающие своё время. В пух и прах растерзанные критиками. Непринятые и непонятые. Когда-то они казались просто неудачными. Но, несмотря на критику, кажущуюся простоту или сложность, сейчас без этих лотов невозможно представить современную культуру. Когда в эти вещи не верил никто, продолжали верить их создатели. И сейчас эти лоты стали культовыми.
                 </p>
               </div>
           </div>
@@ -153,7 +128,7 @@
       </section>
     </main>
     <footer class="footer">
-      <address class="footer__address">
+      <address class="address footer_type_address">
         <ul class="footer__menu-list">
           <li class="footer__menu-list-item">
             <a href="tel:+99995555555">+9 999 555 5555</a>
